--- a/mainstyle.css
+++ b/mainstyle.css
@@ -159,7 +159,7 @@
 
 .yt-lite{
   position:relative; display:block; background:#000; cursor:pointer; border:0; padding:0;
-  background-position:center center; background-size:cover; overflow:hidden;             /* so iframe edges don't spill */
+  background-position:center center; background-size:contain; overflow:hidden;             /* so iframe edges don't spill */
   border-radius:12px;          /* optional: keep your rounded look */
 }
 .yt-lite::before{
